# docsity

./: README.md
docsity/: .gitignore  manage.py  pyproject.toml
docsity/docsity/: asgi.py  settings.py  urls.py  wsgi.py
docsity/warehouse/: admin.py  models.py
docsity/warehouse/lib/: enums.py
