[tool.poetry]
name = "docsity"
version = "0.1.0"
description = ""
authors = ["Mohammad Amin <m.agasemzadeh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
django-model-utils = "^4.2.0"
drf-api-tracking = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
